Modernize orchestration engine for PastureStack
Preserves the official rancher/cattle history through 82d154a53f4089fecfb9f320caad826bb4f6055f and consolidates the maintained compatibility line into one PastureStack commit.

Includes JDK 25 and Ubuntu 26.04 support, dependency and runtime hardening, PastureStack-hosted release defaults, and reproducible release gates. Inherited licensing and attribution remain unchanged.