@@ -2,6 +2,8 @@ package io.cattle.platform.launcher.url;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.net.URLStreamHandler;
@@ -13,7 +15,7 @@ public class JarInJarHandler extends URLStreamHandler {
         String x = u.getPath();
         x = x.replaceAll("___", ":");
         x = x.replaceAll("__", "!");
-        return new URL(x).openConnection();
+        return toURL(x).openConnection();
     }
 
     public static URL createJarInJar(URL jarUrl, String location) throws MalformedURLException {
@@ -21,7 +23,24 @@ public class JarInJarHandler extends URLStreamHandler {
         preUrl = preUrl.replaceAll("!", "__");
         preUrl = preUrl.replaceAll(":", "___");
 
-        return new URL(JarInJarHandlerFactory.INJAR_PROTOCOL + ":" + preUrl);
+        return toURL(JarInJarHandlerFactory.INJAR_PROTOCOL + ":" + preUrl);
+    }
+
+    private static URL toURL(String spec) throws MalformedURLException {
+        /*
+         * Launcher classes run before WEB-INF/lib is on the classpath. Keep this
+         * boot-only URL helper self-contained instead of depending on
+         * cattle-framework-utils/UrlUtils.
+         */
+        try {
+            URI uri = new URI(spec);
+            URLStreamHandler handler = JarInJarHandlerFactory.INJAR_PROTOCOL.equals(uri.getScheme()) ? new JarInJarHandler() : null;
+            return URL.of(uri, handler);
+        } catch (URISyntaxException | IllegalArgumentException e) {
+            MalformedURLException malformed = new MalformedURLException(e.getMessage());
+            malformed.initCause(e);
+            throw malformed;
+        }
     }
 
 }
