@@ -27,7 +27,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
-import javax.inject.Inject;
+import jakarta.inject.Inject;
 
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
@@ -221,7 +221,7 @@ public class ApiAuthenticator extends AbstractApiRequestHandler {
             throw new ClientVisibleException(ResponseCodes.FORBIDDEN);
         }
         try {
-            project = authDao.getAccountById(new Long(parsedProjectId));
+            project = authDao.getAccountById(Long.valueOf(parsedProjectId));
             if (project == null || !accountDao.isActiveAccount(project)) {
                 throw new ClientVisibleException(ResponseCodes.FORBIDDEN);
             }
